--- a/example.html
+++ b/example.html
@@ -6,6 +6,7 @@
 <script src="./js/app.js"></script>
 
 <script src="./js/objectFactory.js"></script>
+<script src="./js/components.js"></script>
 
 
 <style>
